--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="3; url=https://cdn.videy.co/wC2dD5aT1.mp4">
+<meta url=https://cdn.videy.co/wC2dD5aT1.mp4">
 <script src="https://pl28749029.effectivegatecpm.com/ae/cc/8b/aecc8b783d176f39fe737e4256f305f2.js"></script>
