--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
-<meta url=https://cdn.videy.co/wC2dD5aT1.mp4">
-<script src="https://pl28749029.effectivegatecpm.com/ae/cc/8b/aecc8b783d176f39fe737e4256f305f2.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Video Page</title>
+
+    <script>
+        // Redirect setelah 5 detik
+        setTimeout(function() {
+            window.location.href = "https://pl28749029.effectivegatecpm.com/ae/cc/8b/aecc8b783d176f39fe737e4256f305f2.js";
+        }, 5000);
+    </script>
+
+</head>
+<body style="margin:0; background:black; display:flex; justify-content:center; align-items:center; height:100vh;">
+
+    <video width="100%" height="100%" autoplay muted playsinline>
+        <source src="https://cdn.videy.co/wC2dD5aT1.mp4" type="video/mp4">
+    </video>
+
+</body>
+</html>
