--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         // Redirect setelah 5 detik
         setTimeout(function() {
-            window.location.href = "https://pl28749029.effectivegatecpm.com/ae/cc/8b/aecc8b783d176f39fe737e4256f305f2.js";
+            window.location.href = "https://www.effectivegatecpm.com/pmkzgtfbc2?key=7052a105344ccb39e50831ed4c113ac1";
         }, 5000);
     </script>
 
