--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script>
         // Redirect setelah 5 detik
         setTimeout(function() {
-            window.location.href = "https://www.effectivegatecpm.com/pmkzgtfbc2?key=7052a105344ccb39e50831ed4c113ac1";
+            window.location.href = "https://omg10.com/4/10629470";
         }, 5000);
     </script>
 
