--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         // Redirect setelah 5 detik
         setTimeout(function() {
             window.location.href = "https://omg10.com/4/10629470";
+            window.location.href = "https://omg10.com/4/10633956";
+            window.location.href = "https://omg10.com/4/10633958";
+            window.location.href = "https://omg10.com/4/10633959";
+            window.location.href = "https://omg10.com/4/10633960";
         }, 5000);
     </script>
 
