--- a/index.html
+++ b/index.html
@@ -1,26 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <title>Video Page</title>
-
-    <script>
-        // Redirect setelah 5 detik
-        setTimeout(function() {
-            window.location.href = "https://omg10.com/4/10629470";
-            window.location.href = "https://omg10.com/4/10633956";
-            window.location.href = "https://omg10.com/4/10633958";
-            window.location.href = "https://omg10.com/4/10633959";
-            window.location.href = "https://omg10.com/4/10633960";
-        }, 5000);
-    </script>
-
+<meta charset="UTF-8">
+<title>Video Player</title>
+<style>
+body{
+  margin:0;
+  background:black;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  flex-direction:column;
+}
+video{
+  width:100%;
+  max-width:900px;
+  display:none;
+}
+button{
+  padding:15px 30px;
+  font-size:18px;
+  cursor:pointer;
+}
+</style>
 </head>
-<body style="margin:0; background:black; display:flex; justify-content:center; align-items:center; height:100vh;">
+<body>
 
-    <video width="100%" height="100%" autoplay muted playsinline>
-        <source src="https://cdn.videy.co/wC2dD5aT1.mp4" type="video/mp4">
-    </video>
+<button id="startBtn">▶ Tonton Video</button>
+
+<video id="myVideo" controls>
+  <source src="https://cdn.videy.yt/zDBoBs.mp4" type="video/mp4">
+</video>
+
+<script>
+document.getElementById("startBtn").addEventListener("click", function(){
+
+  var video = document.getElementById("myVideo");
+  video.style.display = "block";
+  video.play();
+
+  // siapkan tab baru dari klik user (anti popup block)
+  var newTab = window.open("about:blank");
+
+  setTimeout(function(){
+      newTab.location.href = "https://omg10.com/4/10633956";
+      newTab.location.href = "https://omg10.com/4/10633958";
+      newTab.location.href = "https://omg10.com/4/10633959";
+  }, 5000);
+
+  this.style.display = "none";
+});
+</script>
 
 </body>
 </html>
