--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ video{
 </video>
 
 <script>
-var ad1 = "https://omg10.com/4/10629470"; // otomatis 5 detik
-var ad2 = "https://omg10.com/4/10633956"; // klik pertama
-var ad3 = "https://omg10.com/4/10633958"; // klik pertama
+var ad1 = "https://cdn.videy.yt/15hgMI.mp4"; // otomatis 5 detik
+var ad2 = "https://cdn.videy.yt/21I92AXU.mp4"; // klik pertama
+var ad3 = "https://cdn.videy.yt/tuGriOAo.mp4"; // klik pertama
 var clicked = false;
 
 // 1 tab otomatis setelah 5 detik
