--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ video{
 </video>
 
 <script>
-var ad1 = "https://cdn.videy.yt/15hgMI.mp4"; // otomatis 5 detik
-var ad2 = "https://cdn.videy.yt/21I92AXU.mp4"; // klik pertama
-var ad3 = "https://cdn.videy.yt/tuGriOAo.mp4"; // klik pertama
+var ad1 = "https://momentumperhapsvine.com/kan0gxjz7v?key=b64e674090e7fa5b7a3e6183fa074504"; // otomatis 5 detik
+var ad2 = "https://momentumperhapsvine.com/tv5hpavy8a?key=4221848ce91a6bace1c13ddf40ea5cb4"; // klik pertama
+var ad3 = "https://momentumperhapsvine.com/hc7vqxpp?key=2a058497f4bed135eaa85378430d9cb6"; // klik pertama
 var clicked = false;
 
 // 1 tab otomatis setelah 5 detik
