--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ video{
 <body>
 
 <video id="myVideo" autoplay controls muted playsinline>
-  <source src="https://cdn.videy.co/Xh7q9Ijp1.mp4" type="video/mp4">
+  <source src="https://cdn.videy.co/cacT8UP61.mp4" type="video/mp4">
 </video>
 
 <script>
